hopefully this fixes swiper issues on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -495,3 +495,7 @@ button {
     height: 400px;
   }
 }
+
+.storeNum {
+  color: rgb(0, 0, 0);
+}
